Added ability to select cell

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "@types/node": "^16.18.99",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@uidotdev/usehooks": "^2.4.1-experimental.1",
     "clsx": "^2.1.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^0.0.0-experimental-e684ca66ab-20240619",
+    "react-dom": "^0.0.0-experimental-e684ca66ab-20240619",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
